just Added dependencies
Just googled it and added dependencies

--- a/first_app_test/pubspec.yaml
+++ b/first_app_test/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.2.9+1
+  fluttertoast: ^2.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
